--- a/_config.yml
+++ b/_config.yml
@@ -14,9 +14,9 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Docsy Jekyll
-email: your-email@domain.com
-author: Dinosaur Avocado
+title: Bluefin
+email: jorge.castro@gmail.com
+author: Jorge Castro
 description: > # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
@@ -30,7 +30,7 @@ url: "https://vsoch.github.io" # the base hostname & protocol for your site
 
 # Social (First three Required)
 repo: "https://github.com/vsoch/docsy-jekyll"
-github_user: "vsoch"
+github_user: "castrojo"
 github_repo: "docsy-jekyll"
 github_branch: "master"
 
