--- a/_config.yml
+++ b/_config.yml
@@ -23,19 +23,19 @@ description: > # this means to ignore newlines until "baseurl:"
   Google search results) and in your feed.xml site description.
 
 # Add your baseurl here (your repository) but DO NOT CHANGE THE LINE NUMBER without editing .circleci/circle_urls.sh
-baseurl: "/docsy-jekyll" # the subpath of your site, e.g. /blog
+baseurl: "/bluefin" # the subpath of your site, e.g. /blog
 
 # This is mostly for testing
 url: "https://vsoch.github.io" # the base hostname & protocol for your site
 
 # Social (First three Required)
-repo: "https://github.com/vsoch/docsy-jekyll"
+repo: "https://github.com/ublue-os/bluefin"
 github_user: "castrojo"
-github_repo: "docsy-jekyll"
+github_repo: "bluefin"
 github_branch: "master"
 
 # Optional
-twitter: vsoch
+twitter: castrojo
 linkedin: vsochat
 dockerhub: vanessa
 
