--- a/_data/toc.yml
+++ b/_data/toc.yml
@@ -4,10 +4,10 @@
     - title: "Getting Started"
       url: "docs/getting-started"
       children:
-        - title: Features
-          url: "docs/getting-started#getting-started"
-        - title: Development
-          url: "docs/getting-started#development"
+        - title: Introduction
+          url: "index"
+        - title: Administration
+          url: "docs/administration"
         - title: Customization
           url: "docs/getting-started#customization"
     - title: Versioning
