--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,4 +1,4 @@
 - title: Documentation
   url: docs
 - title: Community
-  url: "https://universal-blue.discourse.group/"
+  external_url: "https://universal-blue.discourse.group/"
