--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,4 +1,4 @@
-- title: Documentation
-  url: docs
+- title: projectbluefin.io
+  external_url: "https://projectbluefin.io"
 - title: Community
   external_url: "https://universal-blue.discourse.group/"
