--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@
 
 title: Bluefin
 email: jorge.castro@gmail.com
-author: Jorge Castro
+author: Universal Blue
 description: > # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
