--- a/_data/toc.yml
+++ b/_data/toc.yml
@@ -9,6 +9,6 @@
       url: "bluefin-dx"
     - title: "FAQ"
       url: "FAQ"
-- title: Development
+- title: Contributing
     - title: "Building Locally"
-      url: 
+      url: local
