--- a/_data/toc.yml
+++ b/_data/toc.yml
@@ -12,3 +12,5 @@
 - title: Contributing
     - title: "Building Locally"
       url: local
+    - title: "Contributor's Guide"
+      external_url: "https://universal-blue.discourse.group/docs?topic=81"
