--- a/_config.yml
+++ b/_config.yml
@@ -47,7 +47,7 @@ dockerhub: vanessa
 # If commented, will use material hat theme
 # logo: "assets/img/logo/SRCC-square-red.png"
 logo_pixels: 34
-color: "#778CB1"
+color: "#403F4C"
 # color: "#8c1515" # primary color for header, buttons
 
 # Build settings
