--- a/_config.yml
+++ b/_config.yml
@@ -36,8 +36,7 @@ github_branch: "main"
 
 # Optional
 twitter: castrojo
-linkedin: vsochat
-dockerhub: vanessa
+linkedin: jorge-castro2112
 
 # Link to a privacy policy in footer, uncomment and define if wanted
 # privacy: https://domain.com/privacy
