--- a/_data/toc.yml
+++ b/_data/toc.yml
@@ -18,3 +18,6 @@
       url: local
     - title: "Contributor's Guide"
       external_url: "https://universal-blue.discourse.group/docs?topic=81"
+- title: Supporting the Project
+  url: donations
+  
