--- a/_data/toc.yml
+++ b/_data/toc.yml
@@ -12,12 +12,14 @@
     - title: "FAQ"
       url: "FAQ"
 - title: Contributing
+  url: ""
   links:
     - title: "Building Locally"
       url: local
     - title: "Contributor's Guide"
       external_url: "https://universal-blue.discourse.group/docs?topic=81"
 - title: Supporting the Project
+  url: ""
     - title: "Donations"
       url: donations
   
