--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,4 +1,6 @@
 - title: projectbluefin.io
   external_url: "https://projectbluefin.io"
 - title: Community
-  external_url: "https://universal-blue.discourse.group/"
+  external_url: "https://community.projectbluefin.io/"
+- title: Feedback
+- external_url: https://feedback.projectbluefin.io 
