--- a/_data/toc.yml
+++ b/_data/toc.yml
@@ -23,7 +23,7 @@
   links:
     - title: "Framework 13"
       url: framework-13
-    - tite: "Framework 16"
+    - title: "Framework 16"
       url: framework-16
 - title: Supporting the Project
   url: ""
