feat: add framework dedicated page

--- a/_data/toc.yml
+++ b/_data/toc.yml
@@ -19,7 +19,7 @@
     - title: "Contributor's Guide"
       external_url: "https://universal-blue.discourse.group/docs?topic=81"
 - title: Framework Laptops
-  url: ""
+  url: "framework"
   links:
     - title: "Framework 13"
       url: framework-13
