--- a/_config.yml
+++ b/_config.yml
@@ -18,9 +18,7 @@ title: Bluefin
 email: jorge.castro@gmail.com
 author: Universal Blue
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  The next generation Linux workstation, designed for reliability, performance, and sustainability. Built for the love of the game. Welcome to indie Cloud Native.
 
 # Add your baseurl here (your repository) but DO NOT CHANGE THE LINE NUMBER without editing .circleci/circle_urls.sh
 baseurl: "/" # the subpath of your site, e.g. /blog
