feat: adding t2-mac to toc, minor updates to t2-mac

--- a/_data/toc.yml
+++ b/_data/toc.yml
@@ -27,6 +27,8 @@
       url: framework-13
     - title: "Framework 16"
       url: framework-16
+- title: "T2 Macs (2018-2020)"
+  url: "t2-mac"
 - title: Supporting the Project
   url: ""
   links:
