lowercase d to fix 404
sorry about that...

--- a/_data/toc.yml
+++ b/_data/toc.yml
@@ -33,7 +33,7 @@
     - title: "T2 Macs on Bluefin"
       url: "t2-mac"
 - title: Supporting the Project
-  url: "Donations"
+  url: "donations"
   links:
     - title: "Donations"
       url: donations
