--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ description: > # this means to ignore newlines until "baseurl:"
   The next generation Linux workstation, designed for reliability, performance, and sustainability. Built for the love of the game. Welcome to indie Cloud Native.
 
 # Add your baseurl here (your repository) but DO NOT CHANGE THE LINE NUMBER without editing .circleci/circle_urls.sh
-baseurl: "/" # the subpath of your site, e.g. /blog
+baseurl: "" # the subpath of your site, e.g. /blog
 
 # This is mostly for testing
 url: "https://docs.projectbluefin.io" # the base hostname & protocol for your site
