--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "serve": "docusaurus serve",
     "write-translations": "docusaurus write-translations",
     "write-heading-ids": "docusaurus write-heading-ids",
-    "typecheck": "tsc"
+    "typecheck": "tsc",
+    "prettier": "prettier --write .",
+    "prettier-lint": "prettier --check ."
   },
   "dependencies": {
     "@docusaurus/core": "3.6.3",
@@ -28,6 +30,7 @@
     "@docusaurus/module-type-aliases": "3.6.3",
     "@docusaurus/tsconfig": "3.6.3",
     "@docusaurus/types": "3.6.3",
+    "prettier": "^3.4.2",
     "typescript": "~5.6.2"
   },
   "browserslist": {
