--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -16,10 +16,11 @@ jobs:
           fetch-depth: 0
       - uses: actions/setup-node@v4
         with:
-          node-version: 22
+          node-version: latest
+          cache: npm
 
       - name: Install dependencies
-        run: npm i
+        run: npm ci
       - name: Build website
         run: npm run build
 
