--- a/.github/workflows/prettier.yml
+++ b/.github/workflows/prettier.yml
@@ -5,7 +5,7 @@ on:
 
 jobs:
   build:
-    name: Build Docusaurus
+    name: Check highlighting with Prettier
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -13,7 +13,7 @@ jobs:
           fetch-depth: 0
       - uses: actions/setup-node@v4
         with:
-          node-version: 22
+          node-version: latest
 
       - name: Install dependencies
         run: sudo npm install -g prettier
