--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -14,16 +14,11 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
-      - uses: actions/setup-node@v4
-        with:
-          node-version: latest
-          cache: npm
-
+      - uses: oven-sh/setup-bun@v2
       - name: Install dependencies
-        run: npm ci
+        run: bun install --frozen-lockfile
       - name: Build website
-        run: npm run build
-
+        run: bun run build
       - name: Upload Build Artifact
         uses: actions/upload-pages-artifact@v3
         with:
