--- a/.github/workflows/pdf.yml
+++ b/.github/workflows/pdf.yml
@@ -19,7 +19,7 @@ jobs:
     - name: Upload results
       uses: actions/upload-artifact@v3
       with:
-        name: result
+        name: bluefin
         # The output filename can be specified with --output option
         path: pdf/bluefin.pdf
         if-no-files-found: error
