--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -4,7 +4,9 @@ on:
   pull_request:
     branches:
       - main
-  merge_group:
+  push:
+    branches:
+      - main
   workflow_dispatch:
 
 jobs:
