--- a/.github/workflows/pdf.yml
+++ b/.github/workflows/pdf.yml
@@ -25,5 +25,6 @@ jobs:
           if-no-files-found: error
       - name: Release PDF     
         uses: softprops/action-gh-release@v2
+        if: github.ref_type == 'tag'
         with:
           files: pdf/bluefin.pdf
