--- a/.github/workflows/pdf.yml
+++ b/.github/workflows/pdf.yml
@@ -27,4 +27,4 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ github.token }}
         run: |
-          gh release upload ${{ needs.release_please.outputs.tag_name }} *.pdf
+          gh release upload ${{github.event.release.tag_name}} pdf/bluefin.pdf
