--- a/.github/workflows/pdf.yml
+++ b/.github/workflows/pdf.yml
@@ -8,6 +8,8 @@ jobs:
   pdf:
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4
+
       - name: Install Prince
         run: |
           curl https://www.princexml.com/download/prince-15.4.1-linux-generic-x86_64.tar.gz -O
