--- a/.github/workflows/pdf.yml
+++ b/.github/workflows/pdf.yml
@@ -4,8 +4,11 @@ on:
     branches:
       - main
   workflow_dispatch:
+
 jobs:
   pdf:
+    permissions:
+      contents: write
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4
