--- a/.github/workflows/pdf.yml
+++ b/.github/workflows/pdf.yml
@@ -28,6 +28,7 @@ jobs:
           # The output filename can be specified with --output option
           path: pdf/bluefin.pdf
           if-no-files-found: error
+          overwrite: true
       - name: Upload Release Artifact
         if: github.event_name != 'pull_request'
         env:
