--- a/changelog/authors.yaml
+++ b/changelog/authors.yaml
@@ -15,6 +15,22 @@ bluefin-release-bot:
   name: Bluefin Bot
   title: Licensed Raptor Specialist
   url: https://github.com/ublue-os/bluefin
+  email: jorge.castro@gmail.com
   image_url: https://github.com/projectbluefin.png
+  page: true
+bluefin-gts-release-bot:
+  name: Bluefin Bot
+  title: GTS Raptor Specialist
+  url: https://github.com/ublue-os/bluefin
+  email: jorge.castro@gmail.com
+  image_url: https://github.com/projectbluefin.png
+  page: true
+bluefin-lts-release-bot:
+  name: Bluefin Bot
+  title: LTS Raptor Specialist
+  url: https://github.com/ublue-os/bluefin
+  email: jorge.castro@gmail.com
+  image_url: https://github.com/projectbluefin.png
+  page: true
 # Common ublue-os contributors (add as needed)
 # Add more authors as changelog contributors are identified
