--- a/.github/workflows/sync-bluefin-releases.yml
+++ b/.github/workflows/sync-bluefin-releases.yml
@@ -1,8 +1,8 @@
 name: Sync Bluefin and Bluefin LTS Releases
 
 on:
-  repository_dispatch:
-    types: [bluefin-release]
+  schedule:
+    - cron: '0 10 * * *' # 6am US Eastern Time (ET) = 10:00 UTC
   workflow_dispatch:
 
 jobs:
