Update Bluesky handle format for author

--- a/blog/authors.yaml
+++ b/blog/authors.yaml
@@ -6,7 +6,7 @@ castrojo:
   image_url: https://github.com/castrojo.png
   email: jorge.castro@gmail.com
   socials:
-    bluesky: ‪castrojo.bsky.social‬
+    bluesky: ‪@castrojo.bsky.social‬
     github: castrojo
     linkedin: jorge-castro2112
     newsletter: https://ypsidanger.com
