--- a/.github/workflows/sync-bluefin-releases.yml
+++ b/.github/workflows/sync-bluefin-releases.yml
@@ -28,115 +28,89 @@ jobs:
         run: |
           echo "Fetching latest releases from all Bluefin repositories..."
 
-          # Source GitHub API utilities for enhanced error handling
-          source scripts/github_api_utils.sh
-
-          # Set environment variables for enhanced logging
-          export VERBOSE_MODE=true
-          
-          # Perform API health check first
-          if ! api_health_check; then
-            log_error "GitHub API health check failed. Cannot proceed."
-            exit 1
-          fi
-
           # Initialize status tracking
           REPOSITORIES_ACCESSED=""
           REPOSITORIES_FAILED=""
 
           # Fetch all releases from ublue-os/bluefin to find latest stable and GTS
-          log_info "Fetching all releases from ublue-os/bluefin..."
-          
-          if ! validate_repository_access "ublue-os/bluefin"; then
-            log_error "Cannot access ublue-os/bluefin repository"
+          echo "Fetching all releases from ublue-os/bluefin..."
+          BLUEFIN_RELEASES=$(curl -s -H "Accept: application/vnd.github.v3+json" \
+            "https://api.github.com/repos/ublue-os/bluefin/releases")
+
+          # Check if request was successful
+          if echo "$BLUEFIN_RELEASES" | jq -e '.message' > /dev/null; then
+            echo "Warning: Failed to fetch bluefin releases"
+            echo "API Response: $BLUEFIN_RELEASES"
             REPOSITORIES_FAILED="$REPOSITORIES_FAILED ublue-os/bluefin"
-            suggest_error_resolution $? "ublue-os/bluefin"
           else
             REPOSITORIES_ACCESSED="$REPOSITORIES_ACCESSED ublue-os/bluefin"
             
-            # Fetch releases with enhanced error handling
-            if BLUEFIN_RELEASES=$(github_api_call "repos/ublue-os/bluefin/releases"); then
-              log_info "Successfully fetched releases from ublue-os/bluefin"
-              
-              # Find latest stable release (tag contains 'stable')
-              BLUEFIN_STABLE_RELEASE=$(echo "$BLUEFIN_RELEASES" | jq -r '[.[] | select(.tag_name | test("stable")) | select(.prerelease == false)] | .[0]')
-              if [[ "$BLUEFIN_STABLE_RELEASE" != "null" ]]; then
-                BLUEFIN_STABLE_TAG=$(echo "$BLUEFIN_STABLE_RELEASE" | jq -r '.tag_name')
-                BLUEFIN_STABLE_URL=$(echo "$BLUEFIN_STABLE_RELEASE" | jq -r '.html_url')
-                BLUEFIN_STABLE_DATE=$(echo "$BLUEFIN_STABLE_RELEASE" | jq -r '.published_at')
+            # Find latest stable release (tag contains 'stable')
+            BLUEFIN_STABLE_RELEASE=$(echo "$BLUEFIN_RELEASES" | jq -r '[.[] | select(.tag_name | test("stable")) | select(.prerelease == false)] | .[0]')
+            if [[ "$BLUEFIN_STABLE_RELEASE" != "null" ]]; then
+              BLUEFIN_STABLE_TAG=$(echo "$BLUEFIN_STABLE_RELEASE" | jq -r '.tag_name')
+              BLUEFIN_STABLE_URL=$(echo "$BLUEFIN_STABLE_RELEASE" | jq -r '.html_url')
+              BLUEFIN_STABLE_DATE=$(echo "$BLUEFIN_STABLE_RELEASE" | jq -r '.published_at')
 
-                log_info "Latest stable release found: $BLUEFIN_STABLE_TAG"
-                log_verbose "Stable release URL: $BLUEFIN_STABLE_URL"
-                
-                # Save stable release data
-                echo "bluefin_stable_tag=$BLUEFIN_STABLE_TAG" >> $GITHUB_OUTPUT
-                echo "bluefin_stable_url=$BLUEFIN_STABLE_URL" >> $GITHUB_OUTPUT
-                echo "bluefin_stable_date=$BLUEFIN_STABLE_DATE" >> $GITHUB_OUTPUT
-                echo "bluefin_stable_available=true" >> $GITHUB_OUTPUT
-              else
-                log_warn "No stable releases found"
-                echo "bluefin_stable_available=false" >> $GITHUB_OUTPUT
-              fi
+              echo "Latest stable release found: $BLUEFIN_STABLE_TAG"
+              echo "Stable release URL: $BLUEFIN_STABLE_URL"
               
-              # Find latest GTS release (tag contains 'gts')
-              BLUEFIN_GTS_RELEASE=$(echo "$BLUEFIN_RELEASES" | jq -r '[.[] | select(.tag_name | test("gts"))] | .[0]')
-              if [[ "$BLUEFIN_GTS_RELEASE" != "null" ]]; then
-                BLUEFIN_GTS_TAG=$(echo "$BLUEFIN_GTS_RELEASE" | jq -r '.tag_name')
-                BLUEFIN_GTS_URL=$(echo "$BLUEFIN_GTS_RELEASE" | jq -r '.html_url')
-                BLUEFIN_GTS_DATE=$(echo "$BLUEFIN_GTS_RELEASE" | jq -r '.published_at')
-
-                log_info "Latest GTS release found: $BLUEFIN_GTS_TAG"
-                log_verbose "GTS release URL: $BLUEFIN_GTS_URL"
-                
-                # Save GTS release data
-                echo "bluefin_gts_tag=$BLUEFIN_GTS_TAG" >> $GITHUB_OUTPUT
-                echo "bluefin_gts_url=$BLUEFIN_GTS_URL" >> $GITHUB_OUTPUT
-                echo "bluefin_gts_date=$BLUEFIN_GTS_DATE" >> $GITHUB_OUTPUT
-                echo "bluefin_gts_available=true" >> $GITHUB_OUTPUT
-              else
-                log_warn "No GTS releases found"
-                echo "bluefin_gts_available=false" >> $GITHUB_OUTPUT
-              fi
+              # Save stable release data
+              echo "bluefin_stable_tag=$BLUEFIN_STABLE_TAG" >> $GITHUB_OUTPUT
+              echo "bluefin_stable_url=$BLUEFIN_STABLE_URL" >> $GITHUB_OUTPUT
+              echo "bluefin_stable_date=$BLUEFIN_STABLE_DATE" >> $GITHUB_OUTPUT
+              echo "bluefin_stable_available=true" >> $GITHUB_OUTPUT
             else
-              local exit_code=$?
-              log_error "Failed to fetch releases from ublue-os/bluefin"
-              REPOSITORIES_FAILED="$REPOSITORIES_FAILED ublue-os/bluefin"
-              suggest_error_resolution $exit_code "ublue-os/bluefin"
+              echo "No stable releases found"
+              echo "bluefin_stable_available=false" >> $GITHUB_OUTPUT
+            fi
+            
+            # Find latest GTS release (tag contains 'gts')
+            BLUEFIN_GTS_RELEASE=$(echo "$BLUEFIN_RELEASES" | jq -r '[.[] | select(.tag_name | test("gts"))] | .[0]')
+            if [[ "$BLUEFIN_GTS_RELEASE" != "null" ]]; then
+              BLUEFIN_GTS_TAG=$(echo "$BLUEFIN_GTS_RELEASE" | jq -r '.tag_name')
+              BLUEFIN_GTS_URL=$(echo "$BLUEFIN_GTS_RELEASE" | jq -r '.html_url')
+              BLUEFIN_GTS_DATE=$(echo "$BLUEFIN_GTS_RELEASE" | jq -r '.published_at')
+
+              echo "Latest GTS release found: $BLUEFIN_GTS_TAG"
+              echo "GTS release URL: $BLUEFIN_GTS_URL"
+              
+              # Save GTS release data
+              echo "bluefin_gts_tag=$BLUEFIN_GTS_TAG" >> $GITHUB_OUTPUT
+              echo "bluefin_gts_url=$BLUEFIN_GTS_URL" >> $GITHUB_OUTPUT
+              echo "bluefin_gts_date=$BLUEFIN_GTS_DATE" >> $GITHUB_OUTPUT
+              echo "bluefin_gts_available=true" >> $GITHUB_OUTPUT
+            else
+              echo "No GTS releases found"
+              echo "bluefin_gts_available=false" >> $GITHUB_OUTPUT
             fi
           fi
 
           # Try to fetch the latest release from ublue-os/bluefin-lts
-          log_info "Fetching latest release from ublue-os/bluefin-lts..."
-          
-          if ! validate_repository_access "ublue-os/bluefin-lts"; then
-            log_error "Cannot access ublue-os/bluefin-lts repository"
+          echo "Fetching latest release from ublue-os/bluefin-lts..."
+          BLUEFIN_LTS_RELEASE=$(curl -s -H "Accept: application/vnd.github.v3+json" \
+            "https://api.github.com/repos/ublue-os/bluefin-lts/releases/latest")
+
+          # Check if LTS request was successful
+          if echo "$BLUEFIN_LTS_RELEASE" | jq -e '.message' > /dev/null; then
+            echo "Warning: Failed to fetch latest bluefin-lts release"
+            echo "API Response: $BLUEFIN_LTS_RELEASE"
             REPOSITORIES_FAILED="$REPOSITORIES_FAILED ublue-os/bluefin-lts"
             echo "bluefin_lts_available=false" >> $GITHUB_OUTPUT
-            suggest_error_resolution $? "ublue-os/bluefin-lts"
           else
+            # Extract bluefin-lts release information
+            BLUEFIN_LTS_TAG=$(echo "$BLUEFIN_LTS_RELEASE" | jq -r '.tag_name')
+            BLUEFIN_LTS_URL=$(echo "$BLUEFIN_LTS_RELEASE" | jq -r '.html_url')
+            BLUEFIN_LTS_DATE=$(echo "$BLUEFIN_LTS_RELEASE" | jq -r '.published_at')
+
+            echo "Latest bluefin-lts release found: $BLUEFIN_LTS_TAG"
             REPOSITORIES_ACCESSED="$REPOSITORIES_ACCESSED ublue-os/bluefin-lts"
             
-            # Fetch latest release with enhanced error handling
-            if BLUEFIN_LTS_RELEASE=$(github_api_call "repos/ublue-os/bluefin-lts/releases/latest"); then
-              # Extract bluefin-lts release information
-              BLUEFIN_LTS_TAG=$(echo "$BLUEFIN_LTS_RELEASE" | jq -r '.tag_name')
-              BLUEFIN_LTS_URL=$(echo "$BLUEFIN_LTS_RELEASE" | jq -r '.html_url')
-              BLUEFIN_LTS_DATE=$(echo "$BLUEFIN_LTS_RELEASE" | jq -r '.published_at')
-
-              log_info "Latest bluefin-lts release found: $BLUEFIN_LTS_TAG"
-              
-              # Save LTS release data
-              echo "bluefin_lts_tag=$BLUEFIN_LTS_TAG" >> $GITHUB_OUTPUT
-              echo "bluefin_lts_url=$BLUEFIN_LTS_URL" >> $GITHUB_OUTPUT
-              echo "bluefin_lts_date=$BLUEFIN_LTS_DATE" >> $GITHUB_OUTPUT
-              echo "bluefin_lts_available=true" >> $GITHUB_OUTPUT
-            else
-              local exit_code=$?
-              log_error "Failed to fetch latest bluefin-lts release"
-              REPOSITORIES_FAILED="$REPOSITORIES_FAILED ublue-os/bluefin-lts"
-              echo "bluefin_lts_available=false" >> $GITHUB_OUTPUT
-              suggest_error_resolution $exit_code "ublue-os/bluefin-lts"
-            fi
+            # Save LTS release data
+            echo "bluefin_lts_tag=$BLUEFIN_LTS_TAG" >> $GITHUB_OUTPUT
+            echo "bluefin_lts_url=$BLUEFIN_LTS_URL" >> $GITHUB_OUTPUT
+            echo "bluefin_lts_date=$BLUEFIN_LTS_DATE" >> $GITHUB_OUTPUT
+            echo "bluefin_lts_available=true" >> $GITHUB_OUTPUT
           fi
 
           # Output summary
@@ -145,29 +119,17 @@ jobs:
 
           # Check if at least one repository was accessible
           if [[ -z "$REPOSITORIES_ACCESSED" ]]; then
-            log_error "No releases could be fetched from any repository"
-            log_error "All repositories failed to respond. This may be due to:"
-            echo "  • GitHub API outages or rate limiting"
-            echo "  • Authentication issues"
-            echo "  • Network connectivity problems"
-            echo "  • Repository access permissions"
-            suggest_error_resolution $ERROR_REPOSITORY_ACCESS
+            echo "Error: No releases could be fetched from any repository"
             exit 1
           fi
 
-          log_info "Repository access summary:"
-          log_info "✅ Accessible repositories:$REPOSITORIES_ACCESSED"
-          if [[ -n "$REPOSITORIES_FAILED" ]]; then
-            log_warn "❌ Failed repositories:$REPOSITORIES_FAILED"
-          fi
+          echo "Repository access summary:"
+          echo "Accessible repositories:$REPOSITORIES_ACCESSED"
+          echo "Failed repositories:$REPOSITORIES_FAILED"
 
       - name: Process available releases
         id: process_releases
         run: |
-          # Source GitHub API utilities for enhanced error handling
-          source scripts/github_api_utils.sh
-          export VERBOSE_MODE=true
-          
           # Initialize tracking
           FILES_CREATED=()
           FILES_SKIPPED=()
@@ -181,7 +143,7 @@ jobs:
             local release_url="$3"
             local release_date="$4"
             
-            log_info "Processing release: $release_tag from $source_repo"
+            echo "Processing release: $release_tag from $source_repo"
             TOTAL_PROCESSED=$((TOTAL_PROCESSED + 1))
             
             # Determine the correct author based on release type
@@ -194,43 +156,42 @@ jobs:
               author="bluefin-release-bot"
             fi
             
-            log_verbose "Using author: $author for release type"
+            echo "Using author: $author for release type"
             
-            # Get detailed release data with enhanced error handling
-            if RELEASE_DATA=$(fetch_release_by_tag "$source_repo" "$release_tag"); then
-              log_verbose "Successfully fetched detailed release data"
-              
-              # Extract detailed release information
-              RELEASE_NAME=$(echo "$RELEASE_DATA" | jq -r '.name // .tag_name')
-              RELEASE_BODY=$(echo "$RELEASE_DATA" | jq -r '.body // ""')
-              
-              # Save release body for processing
-              echo "$RELEASE_BODY" > "/tmp/release_body_${source_repo//\//_}_${release_tag}.md"
-              
-              # Process this release using existing logic
-              output=$(./scripts/process_single_release.sh "$source_repo" "$release_tag" "$release_url" "$release_date" "$RELEASE_NAME" "$RELEASE_BODY" "false" "$author" 2>&1)
-              local result=$?
-              
-              echo "$output"
-              
-              if [[ $result -eq 0 ]]; then
-                  if echo "$output" | grep -q "SKIPPED:"; then
-                      FILES_SKIPPED+=("$source_repo:$release_tag")
-                      log_info "⏭️ Skipped $release_tag (file already exists)"
-                  else
-                      FILES_CREATED+=("$source_repo:$release_tag")
-                      log_info "✅ Successfully created changelog for $release_tag"
-                  fi
-              else
-                  PROCESSING_ERRORS+=("$source_repo:$release_tag - Processing error ($result)")
-                  log_error "❌ Error processing $release_tag (exit code: $result)"
-              fi
-            else
-              local exit_code=$?
-              log_error "Could not fetch detailed data for $release_tag from $source_repo"
-              PROCESSING_ERRORS+=("$source_repo:$release_tag - API access error (code: $exit_code)")
-              suggest_error_resolution $exit_code "$source_repo"
+            # Get detailed release data
+            RELEASE_DATA=$(curl -s -H "Accept: application/vnd.github.v3+json" \
+              "https://api.github.com/repos/$source_repo/releases/tags/$release_tag")
+            
+            if echo "$RELEASE_DATA" | jq -e '.message' > /dev/null; then
+              echo "Warning: Could not fetch detailed data for $release_tag from $source_repo"
+              PROCESSING_ERRORS+=("$source_repo:$release_tag - API access error")
               return 1
+            fi
+            
+            # Extract detailed release information
+            RELEASE_NAME=$(echo "$RELEASE_DATA" | jq -r '.name // .tag_name')
+            RELEASE_BODY=$(echo "$RELEASE_DATA" | jq -r '.body // ""')
+            
+            # Save release body for processing
+            echo "$RELEASE_BODY" > "/tmp/release_body_${source_repo//\//_}_${release_tag}.md"
+            
+            # Process this release using existing logic from original workflow
+            output=$(./scripts/process_single_release.sh "$source_repo" "$release_tag" "$release_url" "$release_date" "$RELEASE_NAME" "$RELEASE_BODY" "false" "$author" 2>&1)
+            local result=$?
+            
+            echo "$output"
+            
+            if [[ $result -eq 0 ]]; then
+                if echo "$output" | grep -q "SKIPPED:"; then
+                    FILES_SKIPPED+=("$source_repo:$release_tag")
+                    echo "⏭️ Skipped $release_tag (file already exists)"
+                else
+                    FILES_CREATED+=("$source_repo:$release_tag")
+                    echo "✅ Successfully created changelog for $release_tag"
+                fi
+            else
+                PROCESSING_ERRORS+=("$source_repo:$release_tag - Processing error ($result)")
+                echo "❌ Error processing $release_tag (exit code: $result)"
             fi
           }
 
@@ -262,7 +223,7 @@ jobs:
                 "${{ steps.fetch_latest_releases.outputs.bluefin_lts_date }}"
             fi
           else
-            log_info "Processing single release from repository dispatch..."
+            echo "Processing single release from repository dispatch..."
             
             # Handle repository_dispatch (single release)
             RELEASE_TAG="${{ github.event.client_payload.tag_name }}"
@@ -275,10 +236,14 @@ jobs:
               SOURCE_REPO="ublue-os/bluefin"
             fi
             
-            log_info "Repository dispatch for $SOURCE_REPO:$RELEASE_TAG"
+            # For repository_dispatch, we need to get the release date
+            RELEASE_DATA=$(curl -s -H "Accept: application/vnd.github.v3+json" \
+              "https://api.github.com/repos/$SOURCE_REPO/releases/tags/$RELEASE_TAG")
             
-            # For repository_dispatch, we need to get the release date using enhanced error handling
-            if RELEASE_DATA=$(fetch_release_by_tag "$SOURCE_REPO" "$RELEASE_TAG"); then
+            if echo "$RELEASE_DATA" | jq -e '.message' > /dev/null; then
+              echo "Error: Release not found for tag $RELEASE_TAG in $SOURCE_REPO"
+              PROCESSING_ERRORS+=("$SOURCE_REPO:$RELEASE_TAG - Release not found")
+            else
               RELEASE_DATE=$(echo "$RELEASE_DATA" | jq -r '.published_at')
               
               # Determine the correct author based on release type
@@ -291,13 +256,12 @@ jobs:
                 AUTHOR="bluefin-release-bot"
               fi
               
-              log_verbose "Using author: $AUTHOR for repository dispatch release"
+              echo "Using author: $AUTHOR for repository dispatch release"
               
-              # Extract release details
+              # Call process_single_release with author parameter
               RELEASE_NAME=$(echo "$RELEASE_DATA" | jq -r '.name // .tag_name')
               RELEASE_BODY=$(echo "$RELEASE_DATA" | jq -r '.body // ""')
               
-              # Process the release
               output=$(./scripts/process_single_release.sh "$SOURCE_REPO" "$RELEASE_TAG" "$RELEASE_URL" "$RELEASE_DATE" "$RELEASE_NAME" "$RELEASE_BODY" "false" "$AUTHOR" 2>&1)
               local result=$?
               
@@ -306,20 +270,15 @@ jobs:
               if [[ $result -eq 0 ]]; then
                   if echo "$output" | grep -q "SKIPPED:"; then
                       FILES_SKIPPED+=("$SOURCE_REPO:$RELEASE_TAG")
-                      log_info "⏭️ Skipped $RELEASE_TAG (file already exists)"
+                      echo "⏭️ Skipped $RELEASE_TAG (file already exists)"
                   else
                       FILES_CREATED+=("$SOURCE_REPO:$RELEASE_TAG")
-                      log_info "✅ Successfully created changelog for $RELEASE_TAG"
+                      echo "✅ Successfully created changelog for $RELEASE_TAG"
                   fi
               else
                   PROCESSING_ERRORS+=("$SOURCE_REPO:$RELEASE_TAG - Processing error ($result)")
-                  log_error "❌ Error processing $RELEASE_TAG (exit code: $result)"
+                  echo "❌ Error processing $RELEASE_TAG (exit code: $result)"
               fi
-            else
-              local exit_code=$?
-              log_error "Release not found for tag $RELEASE_TAG in $SOURCE_REPO"
-              PROCESSING_ERRORS+=("$SOURCE_REPO:$RELEASE_TAG - Release not found (code: $exit_code)")
-              suggest_error_resolution $exit_code "$SOURCE_REPO"
             fi
           fi
 
