--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,5 +4,5 @@
   "compilerOptions": {
     "baseUrl": "."
   },
-  "exclude": [".docusaurus", "build", "backup"]
+  "exclude": [".docusaurus", "build"]
 }
