Add cron schedule for changelog page generation
Add a schedule to generate changelog page on Sundays and Tuesdays.

--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -9,6 +9,8 @@ on:
       - main
   merge_group:
   workflow_dispatch:
+  schedule:
+    - cron: "50 6 * * 0,2" # 6:50 UTC sundays and tuesdays to generate changelog page right after builds
 
 jobs:
   build:
