--- a/blog/authors.yaml
+++ b/blog/authors.yaml
@@ -1,7 +1,7 @@
 castrojo:
   name: Jorge O. Castro
   page: true
-  title: Dinosaur Guy
+  title: Director of Dinosaurs
   url: https://github.com/castrojo
   image_url: https://github.com/castrojo.png
   email: jorge.castro@gmail.com
